Fix text wrap on imput source select overlay (mobile)
- Also test bottom margin fix for Playbar title

--- a/www/css/panels.css
+++ b/www/css/panels.css
@@ -87,7 +87,7 @@ html {background-color:inherit;}
 #inpsrc-indicator {font-size:1.85em;width:100vw;height:100vh;text-align:center;}
 #content.fancy #inpsrc-indicator {animation:colorchange 90s infinite;}
 #inpsrc-indicator span {font-size:1.25em;}
-#inpsrc-msg {padding:0;margin:0;transform:translate(-50%, -50%);top:50%;left:50%;position:fixed;}
+#inpsrc-msg {padding:0;margin:0;transform:translate(-50%, -50%);top:50%;left:50%;position:fixed;width:100%;}
 #inpsrc-msg a {color:#eee;}
 #inpsrc-msg i {font-size:1.5em;}
 #inpsrc-preamp-volume {font-size:.7em !important;}
@@ -535,7 +535,7 @@ input[type='range'].vslide2::-webkit-slider-thumb {background:#fff;background-im
 #playbar {display:flex;align-items:center;height:4.8rem;position:absolute;bottom:0;width:100%;color:var(--adapttext);box-shadow: 0px -1px 3px rgba(0,0,0,0.1);} /* was 9.25vh*/
 /*#playbar-cover {height:4.8rem;width:4.8rem;margin-left:0;border-radius:0;overflow:hidden;position:relative;cursor:pointer;opacity:.75;}*/
 #playbar-cover {height:4.8rem;width:4.8rem;/*4.8*/position:absolute;-webkit-mask-image: linear-gradient(to right, rgba(0,0,0,.5), rgba(0,0,0,0) 100%);}
-#playbar-title {width:calc(50vw - 8.5rem);/* Was 5.5rem */;height:auto;position:absolute;font-size:.9em;left:50%;top:50%;transform:translate(-50%, -50%);text-align:center;padding-bottom:1.75rem;line-height:1.5em;}
+#playbar-title {width:calc(50vw - 8.5rem);/* Was 5.5rem */;height:auto;position:absolute;font-size:.9em;left:50%;top:50%;transform:translate(-50%, -50%);text-align:center;/*TEST padding-bottom:1.75rem;*/line-height:1.5em;}
 #playbar-title a {padding:0;margin:0;display:unset;text-align:unset;font-size:.9rem;color:var(--adapttext) !important;}
 #playbar-title span {opacity:.55;}
 #playbar-title span:first-child {opacity:1.0;}
